# symveig

./: .gitignore  AUTHORS.md  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  conftest.py  pyproject.toml  run.py
docs/: cpc_program_summary.md  reproducibility.md  theory.md  usage.md
examples/: quickstart.py
results/: README.md  benchmark_heisenberg_1d_obc.json  benchmark_heisenberg_1d_pbc.json  benchmark_heisenberg_2d_3x3_pbc.json  benchmark_heisenberg_2d_4x3_pbc.json  benchmark_j1j2_1d_pbc.json  metadata.json  summary.csv
symveig/: __init__.py  benchmark.py  certify_eig.py  cli.py  models.py  plot_results.py
tests/: test_certify_eig.py  test_models.py  test_reproducibility.py
