[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "symveig"
version = "1.0.0"
description = "Verified eigenvalue enclosures for symmetry-decomposed Hermitian matrices"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Sarang Vehale", email = "REPLACE_WITH_EMAIL@example.org" },
]
keywords = [
    "verified computing",
    "interval arithmetic",
    "eigenvalue enclosure",
    "exact diagonalization",
    "quantum lattice models",
    "symmetry sectors",
    "rigorous numerics",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
plots = ["matplotlib>=3.7"]
dev = ["matplotlib>=3.7", "pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/REPLACE_WITH_USER/symveig"
Repository = "https://github.com/REPLACE_WITH_USER/symveig"

[project.scripts]
symveig-run = "symveig.cli:main"

[tool.setuptools]
packages = ["symveig"]

[tool.setuptools.package-data]
symveig = ["py.typed"]
